# PoCA

./: README.md
src/: CMakeLists.txt
src/cmake/modules/: FindDirectToVideo.cmake  FindNumPy.cmake  FindTBB.cmake  Finddirect-to-video.cmake
src/data/: simulation_1.csv  simulation_3.csv
src/images/: Thumbs.db
src/macros/: macro_test.txt
src/poca/: CMakeLists.txt  main.cpp
src/poca/3D_voronoi_GPU/: params.h  voronoi.cu  voronoi.h  voronoi_defs.h
src/poca/Factory/: DelaunayTriangulationFactory.cpp  DelaunayTriangulationFactory.hpp  VoronoiDiagramFactory.cpp  VoronoiDiagramFactory.hpp
src/poca/General/: CGAL_includes.hpp
src/poca/Geometry/: delaunator.cpp  delaunator.hpp  voronator.cpp  voronator.hpp
src/poca/Widgets/: ColocalizationChoiceDialog.cpp  ColocalizationChoiceDialog.hpp  MacroWidget.cpp  MacroWidget.hpp  MainFilterWidget.cpp  MainFilterWidget.hpp  MainWindow.cpp  MainWindow.hpp  MdiChild.cpp  MdiChild.hpp  PythonParametersDialog.cpp  PythonParametersDialog.hpp  PythonWidget.cpp  PythonWidget.hpp  ROIGeneralWidget.cpp  ROIGeneralWidget.hpp  ReorganizeRenderingWidget.cpp  ReorganizeRenderingWidget.hpp
src/poca_coloctesselerplugin/: CMakeLists.txt  ColocTesseler.cpp  ColocTesseler.hpp  ColocTesselerBasicCommands.cpp  ColocTesselerBasicCommands.hpp  ColocTesselerDisplayCommand.cpp  ColocTesselerDisplayCommand.hpp  ColocTesselerPlugin.cpp  ColocTesselerPlugin.hpp  ColocTesselerWidget.cpp  ColocTesselerWidget.hpp  MyTableWidget.cpp  MyTableWidget.hpp
src/poca_core/: CMakeLists.txt
src/poca_core/Cuda/: 3DConnectedComponents.cu  BasicOperationsImage.cu  BasicOperationsImage.h  ConnectedComponents.cu  ConnectedComponents.h  CoreMisc.cpp  CoreMisc.cu  CoreMisc.h
src/poca_core/DesignPatterns/: ChangeManagerSingleton.cpp  ChangeManagerSingleton.hpp  GlobalParametersSingleton.cpp  GlobalParametersSingleton.hpp  ListDatasetsSingleton.cpp  ListDatasetsSingleton.hpp  MacroRecorderSingleton.cpp  MacroRecorderSingleton.hpp  MediatorWObjectFWidget.cpp  MediatorWObjectFWidget.hpp  Observer.hpp  StateSoftwareSingleton.cpp  StateSoftwareSingleton.hpp  (+2 more)
src/poca_dbscanplugin/: CMakeLists.txt  DBSCANCommand.cpp  DBSCANCommand.hpp  DBSCANPlugin.cpp  DBSCANPlugin.hpp  DBSCANWidget.cpp  DBSCANWidget.hpp  dbscan.h
src/poca_delaunaytriangulationplugin/: CMakeLists.txt  DelaunayTriangulationBasicCommands.cpp  DelaunayTriangulationBasicCommands.hpp  DelaunayTriangulationDisplayCommand.cpp  DelaunayTriangulationDisplayCommand.hpp  DelaunayTriangulationParamDialog.cpp  DelaunayTriangulationParamDialog.hpp  DelaunayTriangulationPlugin.cpp  DelaunayTriangulationPlugin.hpp  DelaunayTriangulationWidget.cpp  DelaunayTriangulationWidget.hpp
src/poca_detectionsetplugin/: CMakeLists.txt  CleanerCommand.cpp  CleanerCommand.hpp  DetectionSetBasicCommands.cpp  DetectionSetBasicCommands.hpp  DetectionSetDisplayCommand.cpp  DetectionSetDisplayCommand.hpp  DetectionSetPlugin.cpp  DetectionSetPlugin.hpp  DetectionSetWidget.cpp  DetectionSetWidget.hpp  GaussianDisplayCommand.cpp  GaussianDisplayCommand.hpp  HeatMapDisplayCommand.cpp  HeatMapDisplayCommand.hpp
src/poca_geometry/: CMakeLists.txt
src/poca_kripleyplugin/: CMakeLists.txt  KRipley.cpp  KRipley.hpp  KRipleyPlugin.cpp  KRipleyPlugin.hpp  KRipleyWidget.cpp  KRipleyWidget.hpp
src/poca_loaderCSVFile/: CMakeLists.txt  LoaderCSVFile.cpp  LoaderCSVFile.hpp  OpenFileDialog.cpp  OpenFileDialog.hpp
src/poca_loaderPDBFile/: CMakeLists.txt  LoaderPDBFile.cpp  LoaderPDBFile.hpp
src/poca_nearestlocsmulticolorplugin/: CMakeLists.txt  NearestLocsMultiColorCommands.cpp  NearestLocsMultiColorCommands.hpp  NearestLocsMultiColorPlugin.cpp  NearestLocsMultiColorPlugin.hpp  NearestLocsMultiColorWidget.cpp  NearestLocsMultiColorWidget.hpp
src/poca_objectcolocalizationplugin/: CMakeLists.txt  ObjectColocalization.cpp  ObjectColocalization.hpp  ObjectColocalizationCommands.cpp  ObjectColocalizationCommands.hpp  ObjectColocalizationInfoDialog.cpp  ObjectColocalizationInfoDialog.hpp  ObjectColocalizationPlugin.cpp  ObjectColocalizationPlugin.hpp  ObjectColocalizationWidget.cpp  ObjectColocalizationWidget.hpp
src/poca_objectlistplugin/: CMakeLists.txt  ObjectListBasicCommands.cpp  ObjectListBasicCommands.hpp  ObjectListDisplayCommand.cpp  ObjectListDisplayCommand.hpp  ObjectListParamDialog.cpp  ObjectListParamDialog.hpp  ObjectListPlugin.cpp  ObjectListPlugin.hpp  ObjectListWidget.cpp  ObjectListWidget.hpp  ObjectListsCommands.cpp  ObjectListsCommands.hpp  ObjectListsWidget.cpp  ObjectListsWidget.hpp
src/poca_opengl/: CMakeLists.txt
src/poca_plot/: CMakeLists.txt
src/poca_voronoidiagramplugin/: CMakeLists.txt  VoronoiDiagramBasicCommands.cpp  VoronoiDiagramBasicCommands.hpp  VoronoiDiagramCharacteristicsCommands.cpp  VoronoiDiagramCharacteristicsCommands.hpp  VoronoiDiagramDisplayCommand.cpp  VoronoiDiagramDisplayCommand.hpp  VoronoiDiagramParamDialog.cpp  VoronoiDiagramParamDialog.hpp  VoronoiDiagramPlugin.cpp  VoronoiDiagramPlugin.hpp  VoronoiDiagramWidget.cpp  VoronoiDiagramWidget.hpp
src/pythonScripts/: CAML.py  FuncDistCalcs.py  FuncDistCalcs_3D.py  FuncEtc.py  FuncNormalizeInput.py  densityComputation.py  ellipsoidFit.py  nena.py  sphereFit.py
src/shaders/: 2DGaussianShader.fs  2DGaussianShader.gs  2DGaussianShader.vs  3DellipseShader.fs  3DellipseShader.gs  3DellipseShader.vs  3DvertexShaderUniformColor_instancedRendering.vs  9.ssao.frag  9.ssao_blur.frag  9.ssao_geometry.frag  9.ssao_geometry.geom  9.ssao_geometry.vert  9.ssao_halo.frag  9.ssao_halo.geom  9.ssao_lighting.frag  9.ssao_silhouette.frag  alpha_blending.frag  circle2D.fs  circle2D.gs  circle2D.vs  ellipsoid3DImpostor.fs  ellipsoid3DImpostor.gs  ellipsoid3DImpostor.vs  fragmentShaderUniformColor.fs  fragmentShaderUniformOrNotColor.fs  heatmap.fs  heatmap.gs  heatmap.vs  isosurface.frag  label_rendering.frag  lineRendering.fs  lineRendering.gs  lineRendering.vs  maximum_intensity_projection.frag  maximum_intensity_projection2.frag  maximum_intensity_projection3.frag  maximum_intensity_projection_all.frag  normalRendering.fs  normalRendering.gs  normalRendering.vs  (+18 more)
(+159 files in other folders)
